[gd_scene load_steps=10 format=2]

[ext_resource path="res://Poisons/Manufacturing.gd" type="Script" id=1]
[ext_resource path="res://Assets/background3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Evil Empire.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/background1.png" type="Texture" id=4]
[ext_resource path="res://Assets/poison8.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 3 )

[node name="Manufacturing" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -704.0
margin_bottom = -500.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosionName" type="Label" parent="."]
margin_right = 300.0
margin_bottom = 25.0
text = "[Poison Name]"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Manufacture" type="Button" parent="."]
margin_left = 100.0
margin_top = 70.0
margin_right = 196.0
margin_bottom = 90.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Manufacture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="TextureProgress" parent="."]
margin_left = 35.0
margin_top = 35.0
margin_right = 309.0
margin_bottom = 213.0
rect_scale = Vector2( 0.803, 0.112 )
max_value = 5.0
value = 5.0
rounded = true
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )
fill_mode = 1
tint_progress = Color( 0.0784314, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="ProgressBar"]
one_shot = true

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 290, 45 )
scale = Vector2( 0.6, 0.3 )
texture = ExtResource( 5 )

[node name="Value" type="Label" parent="."]
visible = false
margin_bottom = 14.0
text = "1"

[connection signal="pressed" from="Manufacture" to="." method="_on_Manufacture_pressed"]
[connection signal="timeout" from="ProgressBar/Timer" to="." method="_on_Timer_timeout"]
